--- a/dev_scripts_helpers/test/outcomes/Test_publish_notebook1.test_publish_local_notebook1/input/simple_notebook.ipynb
+++ b/dev_scripts_helpers/test/outcomes/Test_publish_notebook1.test_publish_local_notebook1/input/simple_notebook.ipynb
@@ -22,7 +22,7 @@
     "%autoreload 2\n",
     "\n",
     "\n",
-    "import core.config as cconfig"
+    "import config_root.config as cconfig"
    ]
   },
   {
