HelpersTask51_Improve_latex_toolchain_3 (#96)
* Update

* Update

* Update

* Lint

--- a/dev_scripts_helpers/documentation/pandoc.latex
+++ b/dev_scripts_helpers/documentation/pandoc.latex
@@ -25,7 +25,7 @@ $endif$
 \usepackage{tikz}
 \usepackage[pdf]{graphviz}
 \usetikzlibrary{shapes,arrows}
-\usepackage{musicography}
+%\usepackage{musicography}
 
 $if(linestretch)$
 \usepackage{setspace}
