--- a/dev_scripts_helpers/update_devops_packages/notebooks/Master_buildmeister_dashboard.ipynb
+++ b/dev_scripts_helpers/update_devops_packages/notebooks/Master_buildmeister_dashboard.ipynb
@@ -385,8 +385,8 @@
     "    \"cryptokaizen/cmamp\",\n",
     "    \"cryptokaizen/orange\",\n",
     "    \"cryptokaizen/lemonade\",\n",
-    "    \"kaizen-ai/dev_tools\",\n",
-    "    \"kaizen-ai/kaizenflow\",\n",
+    "    \"causify-ai/dev_tools\",\n",
+    "    \"causify-ai/kaizenflow\",\n",
     "]\n",
     "workflow_df = hlitagh.gh_get_details_for_all_workflows(repo_list)\n",
     "# Reorder columns.\n",
