HelpersTask51_Improve_latex_toolchain_8 (#120)
* Update

* Update

* Update

* Update

* Update

* Update

* Lint

* Lint

* Lint

* Lint

* Update

* Update

* Update

* Update

* Update

* Update

* Lint

* Update

* Update

* Update

* Update

* Update

* Update

* Update

* Lint

--- a/dev_scripts_helpers/notebooks/profile_test_durations.ipynb
+++ b/dev_scripts_helpers/notebooks/profile_test_durations.ipynb
@@ -119,7 +119,8 @@
     "ExecuteTime": {
      "end_time": "2021-12-01T22:16:46.445533Z",
      "start_time": "2021-12-01T22:16:46.442591Z"
-    }
+    },
+    "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": [
@@ -132,7 +133,9 @@
   {
    "cell_type": "markdown",
    "id": "e2f1abe9",
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "source": [
     "# Functions"
    ]
@@ -149,7 +152,7 @@
    },
    "outputs": [],
    "source": [
-    "def get_profiling_command(test_list_name: str):\n",
+    "def get_profiling_command(test_list_name: str) -> str:\n",
     "    \"\"\"\n",
     "    Get command for profiling selected test type.\n",
     "\n",
@@ -160,7 +163,10 @@
     "        test_list_name,\n",
     "        [\"fast_tests\", \"slow_tests\", \"superslow_tests\", \"fast_slow_tests\"],\n",
     "    )\n",
-    "    command = f\"invoke run_{test_list_name} -p 'dev_scripts --durations 0' 2>&1 | tee tmp.{test_list_name}_profile.txt\"\n",
+    "    command = (\n",
+    "        f\"invoke run_{test_list_name} -p 'dev_scripts --durations 0' 2>&1\"\n",
+    "        f\"| tee tmp.{test_list_name}_profile.txt\"\n",
+    "    )\n",
     "    return command"
    ]
   },
